--- a/prisma-schema-node/package.json
+++ b/prisma-schema-node/package.json
@@ -8,8 +8,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development node server.js",
-    "test": "cross-env NODE_ENV=test node server.js",
-    "prod": "cross-env NODE_ENV=production node server.js"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "prod": "cross-env NODE_ENV=production jest node server.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -26,11 +26,14 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "path": "^0.12.7",
     "pg": "^8.16.3",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
-    "prisma": "^7.1.0"
+    "jest": "^30.2.0",
+    "prisma": "^7.1.0",
+    "supertest": "^7.1.4"
   }
 }
