--- a/prisma-schema-node/package.json
+++ b/prisma-schema-node/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "prisma generate && node server.js",
+    "start": "node server.js",
     "dev": "cross-env NODE_ENV=development node server.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "prod": "cross-env NODE_ENV=production jest node server.js"
