--- a/prisma-schema-node/Dockerfile
+++ b/prisma-schema-node/Dockerfile
@@ -9,6 +9,11 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 
+
+COPY prisma ./prisma
+
+RUN npx prisma generate
+
 # Copy all project files
 COPY . .
 
